--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@carbon/charts-svelte": "^1.22.18",
 		"@tailwindcss/vite": "^4.1.7",
+		"apexcharts": "^4.7.0",
 		"gsap": "^3.13.0",
+		"svelte-apexcharts": "^1.0.2",
 		"swiper": "^11.2.7",
 		"tailwindcss": "^4.1.7"
 	}
